--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=pokejava
 server.servlet.encoding.force-response=true
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
