Spring Poke - API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=pokejava
 server.servlet.encoding.force-response=true
-spring.h2.console.enabled=false
+spring.datasource.url=jdbc:mysql://localhost:3306/poke?serverTimezone=Asia/Seoul
+spring.datasource.username=pokejava
+spring.datasource.password=Dycell2156@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.show-sql=true 
+spring.codec.max-in-memory-size=512KB
