--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.css linguist-detectable=false
-*.javascript linguist-detectable=false 
-*.mustache linguist-detectable=false
+*.JavaScript linguist-detectable=false 
+*.Mustache linguist-detectable=false
+*.CSS linguist-detectable=false
